
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_manage"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/opcion1"
                android:title="@string/opcion1"
                app:showAsAction="withText"/>
            <item android:id="@+id/opcion2"
                android:title="@string/opcion2"
                app:showAsAction="withText"/>
            <item android:id="@+id/opcion3"
                android:title="@string/opcion3"
                app:showAsAction="withText"/>
            <item android:id="@+id/opcion4"
                android:title="@string/opcion4"
                app:showAsAction="withText"/>
            <item android:id="@+id/inicio"
                android:title="@string/inicio"
                app:showAsAction="withText"/>
        </menu>
    </item>
    <item android:id="@+id/action_setting"
        android:title="Done"
        android:icon="@android:drawable/ic_menu_agenda"
        android:orderInCategory="100"
        app:showAsAction="ifRoom|withText">
        <menu>
            <item android:id="@+id/opcion1_1"
                android:title="@string/opcion1_1"
                app:showAsAction="withText"/>
            <item android:id="@+id/opcion2_2"
                android:title="@string/opcion2_2"
                app:showAsAction="withText"/>
        </menu>

    </item>
</menu>
